--- a/CommonLib/build.gradle
+++ b/CommonLib/build.gradle
@@ -9,4 +9,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'org.apache.commons:commons-collections4:4.0'
 }
