--- a/DataCollector/build.gradle
+++ b/DataCollector/build.gradle
@@ -9,4 +9,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile project(':CommonLib')
+    compile project(':Database')
 }
