skip javafx dependency; updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,7 @@
 hs_err_pid*
 .gradle/*
 .idea/*
-build/*
+**/build
 Esc.iml
-Database/build/resources/main/coauthors.sql
 Database/src/main/resources/coauthors.sql
 Evolution/Evolution.iml
