Test Cluster module and build fixes

--- a/TestClusteringPankova/build.gradle
+++ b/TestClusteringPankova/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':CommonLib')
     compile project(':Database')
+    compile project(':JavaML')
 }
