--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ hs_err_pid*
 Esc.iml
 Database/src/main/resources/coauthors.sql
 Evolution/Evolution.iml
+DataCollector/src/main/resources/TheVeryBig/pubmed_result.txt
+classes/production/DataCollector/TheVeryBig/pubmed_result.txt
+DataCollector/src/main/resources/TheAverage/pubmed_result.txt
