--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 # databases
 *.db
 
+# Generated files #
+generated/*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
